--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,18 +9,24 @@
     <!-- Error Messages and Title -->
     <string name="title_connection_time_out">Connection Timeout</string>
     <string name="title_internet_unavailable">No Internet</string>
-
     <string name="msg_connection_time_out">Connection Timeout.</string>
     <string name="msg_internet_unavailable">Please check your Wifi or Internet Data and Try Again!</string>
     <string name="msg_logout_success">You have been Successfully logged out.</string>
     <string name="msg_registering_user">Please wait, saving information.</string>
     <string name="msg_reg_user_missing_input">Required parameters are missing. Please check and try again!</string>
 
-    <string name="btn_try_again">Try Again</string>
-
+    <!-- Social login related constants -->
     <string name="facebook_app_id">450594541963943</string>
     <string name="instagram_client_id">8d6f9b2dadb4418cb958fc0354a320ed</string>
     <string name="instagram_client_secret">1f4ecb9808e447e6b6df7f5015ae2e3c</string>
     <string name="instagram_callback_url">http://flowercentral.com</string>
+
+    <!-- Login Page -->
+    <string name="lbl_lets_connect">Let\'s Connect With Us</string>
+    <string name="lbl_need_flower_central_account">Need Flower Central Account?</string>
+    <string name="lbl_app_name">~ Flower Central ~</string>
+    <string name="lbl_app_tag">Your one stop flower shop</string>
+    <string name="lbl_or">Or Sign-In With</string>
+    <string name="btn_try_again">Try Again</string>
 
 </resources>
