--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,19 +16,31 @@
     <string name="msg_reg_user_missing_input">Required parameters are missing. Please check and try again!</string>
 
     <!-- Social login related constants -->
-    <string name="facebook_app_id">450594541963943</string>
-    <string name="instagram_client_id">8d6f9b2dadb4418cb958fc0354a320ed</string>
-    <string name="instagram_client_secret">1f4ecb9808e447e6b6df7f5015ae2e3c</string>
-    <string name="instagram_callback_url">http://flowercentral.com</string>
+    <!--<string name="facebook_app_id">450594541963943</string>-->
+    <!--<string name="instagram_client_id">8d6f9b2dadb4418cb958fc0354a320ed</string>-->
+    <!--<string name="instagram_client_secret">1f4ecb9808e447e6b6df7f5015ae2e3c</string>-->
+    <!--<string name="instagram_callback_url">http://flowercentral.com</string>-->
 
     <!-- Login Page -->
     <string name="lbl_lets_connect">Let\'s Connect With Us</string>
-    <string name="lbl_need_flower_central_account">Need Flower Central Account?</string>
+    <string name="lbl_need_flower_central_account"><u>Need Flower Central Account?</u></string>
     <string name="lbl_app_name">~ Flower Central ~</string>
     <string name="lbl_app_tag">Your one stop flower shop</string>
     <string name="lbl_or">Or Sign-In With</string>
     <string name="btn_try_again">Try Again</string>
-    <string name="title_activity_dashboard">Dashboard</string>
+    <string name="lbl_vendor_name">Vendor Name</string>
+    <string name="lbl_password">Password</string>
+    <string name="lbl_login">Login</string>
+    <string name="lbl_forgot_password"><u>Forgot Password?</u></string>
+
+    <!-- Register -->
+    <string name="lbl_register">Register</string>
+    <string name="lbl_address">Address</string>
+    <string name="lbl_state">State</string>
+    <string name="lbl_city">City</string>
+    <string name="lbl_zip">Zip</string>
+    <string name="lbl_phone1">Phone1</string>
+    <string name="lbl_phone2">Phone2</string>
 
     <!-- Navigation drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -39,6 +51,7 @@
     <string name="nav_item_feedback">View Feedback</string>
     <string name="nav_item_help">Help</string>
     <string name="nav_item_logout">Logout</string>
+    <string name="project_url">http://flowercentral.com</string>
 
     <!-- Order fragment -->
     <string name="title_pending_order">Pending Orders</string>
