--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="btn_try_again">Try Again</string>
     <string name="lbl_vendor_name">Vendor Name</string>
     <string name="lbl_password">Password</string>
-    <string name="lbl_login">Login</string>
+    <string name="lbl_login">LOGIN</string>
     <string name="lbl_forgot_password"><u>Forgot Password?</u></string>
 
     <!-- Register -->
@@ -52,5 +52,13 @@
     <string name="title_completed_order">Completed Orders</string>
     <string name="empty_pending_order_items">No pending order items</string>
     <string name="empty_completed_order_items">No completed order items</string>
+    <string name="order_lbl_price">$%s</string>
+    <string name="order_lbl_quantity">Item: %s</string>
+    <string name="order_lbl_schedule">Schedule: %s</string>
+    <string name="order_lbl_address">Address: %s</string>
+    <string name="lbl_view_on_map">Address: %s</string>
+    <string name="lbl_status_pending">Pending</string>
+    <string name="lbl_status_delivered">Delivered</string>
+    <string name="btn_view_on_map">VIEW ON MAP</string>
 
 </resources>
