--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="s_action_redirect_settings">Settings</string>
     <string name="s_required_permission_read_storage">Grant permission to read storage.</string>
 
+    <string name="order_details">Order Details</string>
 </resources>
