--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="lbl_new_password">New Password</string>
     <string name="lbl_confirm_new_password">Confirm New Password</string>
     <string name="lbl_reset_password">Reset Password</string>
+    <string name="empty_feedback_list">No feedback items to show</string>
 </resources>
