Shop pictures functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,7 @@
     <string name="lbl_accept">Accept</string>
     <string name="lbl_reject">Reject</string>
     <string name="api_res_status">status</string>
+    <string name="lbl_remove"><u>Remove</u></string>
+    <string name="btn_upload_new">Upload New</string>
+    <string name="api_key_picture_id">picture_id</string>
 </resources>
