Upload doc, image using MultipartUtility.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,7 @@
     <string name="lbl_remove"><u>Remove</u></string>
     <string name="btn_upload_new">Upload New</string>
     <string name="api_key_picture_id">picture_id</string>
+    <string name="msg_uploading_data">Please wait! uploading data to server</string>
+    <string name="msg_data_upload_succes">Data upload success.</string>
+    <string name="msg_data_upload_failed">Data upload failed.</string>
 </resources>
