--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,6 @@
     <string name="lbl_total_sales">Total Sales :</string>
     <string name="colon">:</string>
     <string name="title_help">Help?</string>
+    <string name="api_key_start_date">start_date</string>
+    <string name="api_key_end_date">end_date</string>
 </resources>
