--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="api_key_pin">pin</string>
     <string name="api_key_phone1">phone1</string>
     <string name="api_key_phone2">phone2</string>
-    <string name="api_key_tin_num">tin_num</string>
+    <string name="api_key_tin_num">tin_number</string>
     <string name="api_key_order_id">order_id</string>
     <string name="api_key_timestamp">timestamp</string>
     <string name="api_key_old_password">old_password</string>
@@ -137,4 +137,7 @@
     <string name="api_key_start_date">start_date</string>
     <string name="api_key_end_date">end_date</string>
     <string name="sales_stat_title">Order Stats</string>
+    <string name="api_key_email">email</string>
+    <string name="api_key_country">country</string>
+    <string name="content_description">desc</string>
 </resources>
