--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name="api_key_email">email</string>
     <string name="api_key_country">country</string>
     <string name="content_description">desc</string>
+    <string name="lbl_search_hint">Search from/to orders</string>
 </resources>
