Forgot password functionality. Adapter getItemCount() size error handling. Session expired dialog only for activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="api_key_country">country</string>
     <string name="content_description">desc</string>
     <string name="lbl_search_hint">Search from/to orders</string>
+    <string name="api_res_message">message</string>
 </resources>
